Removed unused database fields

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -3,10 +3,5 @@
   "deepLAuthKey": "",
   "googleAuthKey": "",
   "microsoftAuthKey": "",
-  "openAiAuthKey": "",
-  "address": "localhost",
-  "port": 3306,
-  "username": "username",
-  "password": "password",
-  "database": "database"
+  "openAiAuthKey": ""
 }
